# ticket

./: Cargo.toml
src/: components.rs  error.rs  lib.rs  message_command.rs  modal.rs  ready.rs  support_guild_manager.rs  ticket_manager.rs
src/components/: mod.rs  support_close.rs  support_faq.rs  support_ticket.rs
src/slash_commands/: mod.rs
src/slash_commands/support/: get.rs  list.rs  mod.rs
src/slash_commands/ticket/: close.rs  create.rs  fixed.rs  mod.rs  open.rs  remove.rs
