[package]
name = "ticket"
version = "0.1.0"
edition = "2021"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
async-trait = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = ["any", "macros"] }
serenity = { version = "*", default-features = false, features = [
    "model",
    "rustls_backend",
] }
futures = { version = "*", default-features = false }
